2022-09-03  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\pdfTeX): define, another unnecessary macro people
	like to use.

2022-06-28  Karl Berry  <karl@freefriends.org>

	* tugboat.bst (ctan): do not complain about empty date or note
	fields (for voss articles).
	
	* ltubguid.ltx: convention for multiple citations.
	
	* tugboat.dtx: doc.

2022-05-19  Karl Berry  <karl@freefriends.org>

	* version 2.27 (2022-05-19) uploaded to CTAN.

	* tugboat.dtx (\eTeX): use \boldsymbol if available.
	
	* tugboat.dtx (\nameref): only define \AtBeginDocument,
	to avoid overwriting warning from new hyperref.
	
	* ltubguid.ltx: wording.

2022-04-10  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\tbsfootnoteurl, \tbhfootnoteurl): new definitions,
	since bb says she can use them.
	* ltubguid.ltx (Explanations): document them.
	* tubrfootest.tex: test \tbsfootnoteurl and \tbhfootnoteurl.

2022-04-09  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\KOMAScript): allow break at hyphen.

2021-11-24  Karl Berry  <karl@freefriends.org>

	* tugboat.bst: blank lines.

2021-10-29  Karl Berry  <karl@freefriends.org>

	* tugboat.bst: typo.

	* tugboat.dtx (\pdfstringdefDisableCommands): also handle \Dash.

2021-10-27  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\tubsentencespace, \tubjustifiedpar): new cs.
	Doc tweaks.

2021-10-12  Karl Berry  <karl@freefriends.org>

	* version 2.26 (2021-10-12) uploaded to CTAN.

2021-09-28  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\tbhurl@, \tbsurl@): redefine to strip a leading
	explicit http(s), respectively, if present.  From Ulrike Fischer,
	https://github.com/latex3/hyperref/issues/125.
	* ltubguid.ltx: update doc.
	* tuburllivetest.tex: update tests.

2021-09-15  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\tubabovedoi): new hook, used in tb131rosendahl-tug21.
	
	* tugboat.dtx (\AtBeginDocument): use \pdfstringdefDisableCommands
	(if it's defined, i.e., hyperref is load) to disable \acro.
