@@ -27,10 +27,11 @@ ltugcomn.sty ltugboat.sty ltugboat.cls: tugboat.ins tugboat.dtx
 	$(latex) $<
 
 check: ltugboat.sty
-	$(pdflatex) tubverbtest.tex
-	$(pdflatex) tubxtx.tex
 	$(pdflatex) tuburltexttest.tex
 	$(pdflatex) tuburllivetest.tex
+	false
+	$(pdflatex) tubverbtest.tex
+	$(pdflatex) tubxtx.tex
 	$(pdflatex) tubmetatest.tex
 	$(pdflatex) tubptest.tex
 	$(pdflatex) tubatest.tex
