@@ -10,8 +10,8 @@ https, protocol stripped: \tbsurl{https://tug.org}
 https, incorrect protocol given: \tbsurl{http://tug.org}
 
 http: \tbhurl{tug.org}
+
 http, protocol stripped: \tbhurl{http://tug.org}
 
-Hello.
 \loggingall
 \end{document}
